# vnc-desktop

./: .copier-answers.yml  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  act.toml  justfile  prek.toml  rust-toolchain.toml  wkg-registry.toml
.github/workflows/: ci.yml
e2e/: info.hurl  session.hurl  tools.hurl
skill/: SKILL.md
src/: keysyms.rs  lib.rs  rfb.rs
wit/: deps.toml  world.wit
